Avoid showing horizontal scroll bar

--- a/src/media/main.css
+++ b/src/media/main.css
@@ -1,3 +1,17 @@
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+}
+
+#viewer {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
 .actions {
   position: absolute;
   top: 10px;
